==> gabonator/LA104/system/apps_experiments/118_basic/source/terminal-basic/HAL_esp8266.cpp <==
#include "HAL.h"
#include "FS.h"
#define NVRAMSIZE 32768
#define HAL_ESP8266_EXTEM_SPIFFS 1
#define HAL_ESP8266_EXTEM_SD 2
#define HAL_ESP8266_EXTEM HAL_ESP8266_EXTEM_SPIFFS
#include <SD.h>

HAL_extmem_file_t
HAL_extmem_openfile(const char fname[13])
{
	size_t i = 0;
	for (; i < HAL_EXTMEM_NUM_FILES; ++i) {
		if (!extmem_files[i])
			break;
	}

	if (i == HAL_EXTMEM_NUM_FILES) {
		Serial.println("Exceed number of opened fils");
		return 0;
	}

#if HAL_ESP8266_EXTEM == HAL_ESP8266_EXTEM_SPIFFS

	char fname_[14];
	fname_[0] = '/';
	strncpy(fname_ + 1, fname, 12);
	fname_[13] = '\0';

	extmem_files[i] = SPIFFS.open(fname_, "r+");
	if (!extmem_files[i]) {
		extmem_files[i] = SPIFFS.open(fname_, "w");
		if (!extmem_files[i]) {
			Serial.println("SPIFFS.open");
			return 0;
		}
	}
#elif HAL_ESP8266_EXTEM == HAL_ESP8266_EXTEM_SD

	extmem_files[i] = SD.open(fname, "r+");
	if (!extmem_files[i]) {
		extmem_files[i] = SD.open(fname, "w+");
		if (!extmem_files[i])
			return 0;
	}
#endif // HAL_ESP8266_EXTEM

	return i + 1;
}

uint16_t
HAL_extmem_getnumfiles()
{
	uint16_t result = 0;
#if HAL_ESP8266_EXTEM == HAL_ESP8266_EXTEM_SPIFFS
	Dir d = SPIFFS.openDir("");
	if (!d.rewind())
		return 0;

	while (d.next())
		++result;
#elif HAL_ESP8266_EXTEM == HAL_ESP8266_EXTEM_SD
	File d = SD.open("/");
	if (!d.isDirectory())
		return 0;

	while (true) {
		File f = d.openNextFile();
		if (!f)
			break;
		++result;
		f.close();
	}
	d.close();
#endif // HAL_ESP8266_EXTEM
	return result;
}

void
HAL_extmem_getfilename(uint16_t num, char fname[13])
{
	fname[0] = '\0';
	
#if HAL_ESP8266_EXTEM == HAL_ESP8266_EXTEM_SPIFFS
	Dir d = SPIFFS.openDir("");
	if (!d.rewind())
		return;
	
	while (d.next()) {
		if (num == 0) {
			strncpy(fname, d.fileName().c_str() + 1, 12);
			fname[12] = '\0';
			break;
		}
		num--;
	}
#elif HAL_ESP8266_EXTEM == HAL_ESP8266_EXTEM_SD
	File d = SD.open("/");
	if (!d.isDirectory())
		return;
	
	while (true) {
		File f = d.openNextFile();
		if (!f)
			break;
		if (num == 0) {
			strncpy(fname, f.name(), 12);
			fname[12] = '\0';
			f.close();
			break;
		}
		num--;
		f.close();
	}
	d.close();
#endif // HAL_ESP8266_EXTEM
}
